# ubenv

./: .gitignore  CMakeLists.txt  README.md  crc32.cpp  crc32.h  main.cpp  make.py  mmcblk0.txt  uboot_args.cpp  uboot_args.h
cmake/modules/: Android.cmake  FindAndroidNDK.cmake  FindAndroidSDK.cmake  FindAnt.cmake  FindDirectX.cmake  FindGLES.cmake  FindGStreamer.cmake  FindJava.cmake  Findtrace.cmake  Findwindow.cmake
cmake/modules/Android/gradle/: build.gradle  local.properties  settings.gradle
cmake/modules/avm/: utils.cmake
cmake/toolchain/: linaro.cmake  llvm.cmake  prosense.cmake
